# dnd-combat-simulator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
docs/: stage4-build-math.md
docs/development/: ui_architecture.md
scripts/: benchmark_simulation.py  smoke_test_supabase_share_store.py
src/dnd_combat_simulator/: __init__.py  app.py  build_math.py  combat.py  dice.py  share_store.py  sharing.py  simulation.py
src/dnd_combat_simulator/ui/: __init__.py  _shared.py  components.py  constants.py  inputs.py  monolith.py  page.py  results.py  run_control.py  sharing.py  state.py  validation.py  validation_rendering.py  widget_keys.py
tests/: test_app.py  test_build_math.py  test_combat.py  test_dice.py  test_empowered.py  test_regression_refactor.py  test_resources.py  test_share_store.py  test_sharing.py  test_simulation.py  test_stage31_cache_behavior.py  test_stage31_properties.py  test_stage3_cache_architecture.py  test_streamlit_smoke.py  test_ui_architecture.py  ui_test_api.py
