[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dnd-combat-simulator"
version = "0.1.0"
description = "A Streamlit browser interface for a future DnD combat simulator."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dnd_combat_simulator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
